@@ -1,3 +1,9 @@
+2017-06-30  Martin Liska  <mliska@suse.cz>
+
+	PR sanitizer/81021
+	* tree-eh.c (lower_resx): Call BUILT_IN_ASAN_HANDLE_NO_RETURN
+	before BUILT_IN_UNWIND_RESUME when ASAN is used.
+
 2017-06-30  Yvan Roux  <yvan.roux@linaro.org>
 
 	* doc/invoke.texi (AArch64): Add missing options and remove redundant
